# betterMQ

./: .dockerignore  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install  install.ps1  install.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
engine/: README.md
engine/broker-api/: Cargo.toml
engine/broker-api/src/: auth.rs  batch.rs  bettermq.rs  catalog_tombstones.rs  cluster.rs  cluster_auth.rs  gateway.rs  groups.rs  http_fields.rs  infra.rs  lib.rs  local_auth.rs  metering.rs  ops.rs  publish_path.rs  routes.rs
engine/broker-cli/: Cargo.toml
engine/broker-cli/src/: lib.rs
engine/broker-config/: Cargo.toml
engine/broker-config/src/: cluster.rs  file.rs  lib.rs  managed.rs  resolve.rs  types.rs
engine/broker-dispatch/: Cargo.toml
engine/broker-dispatch/src/: fairness.rs  flow_control.rs  hmac_sig.rs  host_blocker.rs  lib.rs  memory_guard.rs  outbound.rs  worker.rs
engine/broker-dispatch/tests/: direct_delivery.rs  flow_control.rs  host_blocker.rs  retry_dlq.rs
engine/broker-local-auth/: Cargo.toml
engine/broker-local-auth/src/: lib.rs
engine/broker-partition/: Cargo.toml
engine/broker-partition/src/: blob.rs  broker.rs  flow.rs  flows.rs  groups.rs  http_delivery.rs  lib.rs  payload.rs  priority.rs  subscriptions.rs  topic.rs
engine/broker-payload/: Cargo.toml
engine/broker-payload/src/: fs.rs  inline.rs  lib.rs  ref.rs  s3.rs  store.rs
engine/broker-proto/: Cargo.toml
engine/broker-proto/src/: lib.rs  record.rs  retry.rs
engine/broker-raft-meta/: Cargo.toml
engine/broker-raft-meta/src/: cluster.rs  election.rs  lib.rs
engine/broker-replication/: Cargo.toml
engine/broker-replication/src/: append.rs  lib.rs
engine/broker-schedule/: Cargo.toml
engine/broker-schedule/src/: cron.rs  lib.rs  persist.rs
engine/broker-server/: Cargo.toml  build.rs
engine/broker-server/embedded/: scalar.html
engine/broker-server/openapi/: bettermq.openapi.json
engine/broker-server/src/: cluster_health.rs  docs.rs  main.rs  panel.rs  startup_banner.rs
engine/broker-server/tests/: cluster_failover.rs  cluster_replication.rs  crash_recovery.rs  webhook_dispatch.rs
engine/broker-storage/: Cargo.toml
engine/broker-storage/src/: backend.rs  indexes.rs  lib.rs  log.rs  message_store.rs  meta.rs  s3_store.rs  slate.rs  slate_log.rs
engine/control-panel/: app.js  index.html  theme.css
selfhost/: Dockerfile  README.md  docker-compose.slate.yml  docker-compose.yml
