[package]
name = "broker-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP API routes (Axum)"

[features]
default = []
cloud = []

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
http = "1"

broker-proto = { workspace = true }
broker-partition = { workspace = true }
broker-dispatch = { workspace = true }
broker-schedule = { workspace = true }
broker-config = { workspace = true }
broker-storage = { workspace = true, features = ["slate"] }
urlencoding = "2"
reqwest = { workspace = true }
broker-raft-meta = { workspace = true }
broker-replication = { workspace = true }
broker-local-auth = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
percent-encoding = "2"

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
tempfile = "3"
