[package]
name = "broker-dispatch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Webhook push delivery with HMAC, retries, and DLQ (CP2)"

[dependencies]
broker-partition = { path = "../broker-partition" }
broker-proto = { workspace = true }
broker-storage = { path = "../broker-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
url = "2"

[dev-dependencies]
broker-proto = { workspace = true }
wiremock = "0.6"
tokio = { workspace = true }
tempfile = "3"
serde_json = "1"
