[package]
name = "broker-partition"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Per-partition leader log and broker orchestration"

[features]
default = []
slate = ["broker-storage/slate", "broker-payload/s3", "dep:object_store"]

[dependencies]
broker-proto = { workspace = true }
broker-payload = { workspace = true }
broker-storage = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
object_store = { version = "0.12", optional = true }

[dev-dependencies]
tempfile = "3"
