[package]
name = "broker-payload"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Payload blob store (inline + S3/MinIO) — CP3b"

[dependencies]
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
bytes = "1"
parking_lot = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, optional = true }
object_store = { version = "0.12", optional = true, features = ["aws"] }

[features]
default = []
s3 = ["dep:object_store", "dep:tokio"]

[dev-dependencies]
tempfile = "3"
