[package]
name = "broker-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BetterMQ record format and shared types"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
bincode = { workspace = true }
crc32fast = { workspace = true }
