[package]
name = "broker-raft-meta"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cluster metadata and shard leadership (CP7a)"

[dependencies]
broker-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3"
